A bit of content added.

--- a/index.html
+++ b/index.html
@@ -4,47 +4,48 @@ title: Extra!
 ---
 
 <div id="home">
+	<h2>International</h2>
 	<div class="row">
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail">
-				<img data-src="holder.js/300x200" alt="...">
+				<img src="http://odstatic.com/elmundotoday.com/2013/10/papadios.jpg" alt="...">
 				<div class="caption">
-					<h3>Noticia 1</h3>
-					<p>...</p>
+					<h3>The Pope asks help to God to finish Candy Crush</h3>
+					<p>he Pope would have asked for God's intervention in at least eight times to overcome the most complicated levels of the game "Candy Crush".</p>
 					<p><a href="#" class="btn btn-primary" role="button">Read more</a></p>
 				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail">
-				<img data-src="holder.js/300x200" alt="...">
+				<img src="{{ site.baseurl}}/images/01.jpg" alt="...">
 				<div class="caption">
-					<h3>Noticia 2</h3>
-					<p>...</p>
+					<h3>Red Bull sponsors the run of a lady trying to reach the bus</h3>
+					<p>'I almost miss it! Thanks to the Red Bull that I drank a while ago'</p>
 					<p><a href="#" class="btn btn-primary" role="button">Read more</a></p>
 				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail">
-				<img data-src="holder.js/300x200" alt="...">
+				<img src="http://odstatic.com/elmundotoday.com/2011/06/placebo.jpg" alt="...">
 				<div class="caption">
-					<h3>Noticia 3</h3>
-					<p>...</p>
+					<h3>Opening of the first gym for people who will not attend.</h3>
+					<p>A fitness center for people interested in having the feeling that they look good and play sports regularly.</p>
 					<p><a href="#" class="btn btn-primary" role="button">Read more</a></p>
 				</div>
 			</div>
 		</div>
 	</div>
 	
-	
+	<h2>National</h2>
 	<div class="row">
 		<div class="col-md-12">
 			<ul class="thumbnails">
 				<li class="col-md-6 clearfix">
 					<div class="thumbnail clearfix">
 						<div class="caption">
-							<a href="#" class="btn btn-primary icon pull-right">Read more</a>
+							<a href="#" class="btn btn-primary icon pull-right">Read</a>
 							<h4>      
 								<a href="#" >New browser knows when you are drunk</a>
 							</h4>
@@ -55,7 +56,7 @@ title: Extra!
 				<li class="col-md-6 clearfix">
 					<div class="thumbnail clearfix">
 						<div class="caption">
-							<a href="http://bootsnipp.com/" class="btn btn-primary icon pull-right">Read more</a>
+							<a href="#" class="btn btn-primary icon pull-right">Read</a>
 							<h4>      
 								<a href="#" >Most people don't understand the things they say</a>
 							</h4>
@@ -66,7 +67,7 @@ title: Extra!
 				<li class="col-md-6 clearfix">
 					<div class="thumbnail clearfix">
 						<div class="caption">
-							<a href="#" class="btn btn-primary icon pull-right">Read more</a>
+							<a href="#" class="btn btn-primary icon pull-right">Read</a>
 							<h4>      
 								<a href="#" >Due to the crisis, all Tetris pieces will be equal</a>
 							</h4>
@@ -77,7 +78,7 @@ title: Extra!
 				<li class="col-md-6 clearfix">
 					<div class="thumbnail clearfix">
 						<div class="caption">
-							<a href="#" class="btn btn-primary icon  pull-right">Read more</a>
+							<a href="#" class="btn btn-primary icon  pull-right">Read</a>
 							<h4>      
 								<a href="#">13 years in bed asking for "5 more minutes"</a>
 							</h4>
